taems-1.3.1/taems/preprocessor/PreProcessorParser.java
/* Generated By:JavaCC: Do not edit this line. PreProcessorParser.java */
package taems.preprocessor;
import java.util.*;
import taems.*;
import utilities.Log;

public class PreProcessorParser implements PreProcessorParserConstants {

public static void main(String argv[]) throws ParseException {
       PreProcessorParser parser = new PreProcessorParser(System.in);
       boolean output=false;
       PreProcessor pre = parser.Input();
       taems.parser.ReadTTaems reader = null;

        Log log = Log.getDefault();
        log.setLevel(Log.LOG_EMERG);
        reader = new taems.parser.ReadTTaems(log);

       Hashtable ht = new Hashtable();
       for (int i=0; i<argv.length; i++) {
         if (argv[i].equals("-ptaems")) {
                System.out.println(pre.toString());
                output=true;
         }
         if (argv[i].equals("-tmpttaems")) {
              System.out.println(pre.toTTaems(ht));
              pre.reset();
              output=true;
              }
         if (argv[i].equals("-ttaems")) {
            taems.Taems task = reader.readTTaems(new java.io.StringReader(pre.toTTaems(ht)));
            System.out.println(task.toTTaems(Taems.V1_1));
            pre.reset();
            output=true;
             }
        }
        if (!output) {
            taems.Taems task = reader.readTTaems(new java.io.StringReader(pre.toTTaems(ht)));
            System.out.println(task.toTTaems(Taems.V1_1));
            }
        System.exit(0);
        }

  final public PreProcessor Input() throws ParseException {
        Token t = null;
        Block b;
  Vector v = new Vector();
        PreProcessor p = new PreProcessor();
    label_1:
    while (true) {
      v = readStandardBlocks(p);
      p.addBlocks(v);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case DEFINE:
      case DEFINENOW:
      case WHILE:
      case LPAREN:
      case RPAREN:
      case DOLLAR:
      case AT:
      case POUND:
      case AFFECT:
      case COMMA:
      case ID:
      case SPECIAL:
      case NUM:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
    {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Vector readStandardBlocks(PreProcessor p) throws ParseException {
        Vector v = new Vector();
        Block b;
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        jj_consume_token(DEFINE);
        b = readDefine(p, false);
                      v.addElement(b);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DEFINENOW:
          jj_consume_token(DEFINENOW);
          b = readDefine(p, true);
                      v.addElement(b);
          break;
        case WHILE:
          jj_consume_token(WHILE);
          b = readWhile(p);
                      v.addElement(b);
          break;
        case IF:
          jj_consume_token(IF);
          b = readIf(p);
                      v.addElement(b);
          break;
        case LPAREN:
        case RPAREN:
        case DOLLAR:
        case AT:
        case POUND:
        case AFFECT:
        case COMMA:
        case ID:
        case SPECIAL:
        case NUM:
          b = readTTaems(p);
                      v.addElement(b);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case DEFINE:
      case DEFINENOW:
      case WHILE:
      case LPAREN:
      case RPAREN:
      case DOLLAR:
      case AT:
      case POUND:
      case AFFECT:
      case COMMA:
      case ID:
      case SPECIAL:
      case NUM:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
          {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  final public TaemsBlock readTTaems(PreProcessor p) throws ParseException {
        String r = "", answer = "", tmp;
        TaemsBlock b = new TaemsBlock(p);
        Block b2;
        Token t;
        Vector v;
    label_3:
    while (true) {
      if (jj_2_2(2)) {
        jj_consume_token(DOLLAR);
        t = jj_consume_token(ID);
                         //r = r + " $" + t.image ;
                         b2 = new Variable(p,t.image);
                         if(!r.equals("")) {
                           TaemsBlock b1 = new TaemsBlock(p);
                           b1.setTaems(r+" ");
                           r = "";
                           b.addSubBlock(b1);
                               }
                         b.addSubBlock(b2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AT:
          jj_consume_token(AT);
          t = jj_consume_token(ID);
                         //r = r + " @" + t.image ;
                         b2 = new List(p,t.image);
                         if(!r.equals("")) {
                            TaemsBlock b1 = new TaemsBlock(p);
                            b1.setTaems(r+" ");
                            r = "";
                            b.addSubBlock(b1);
                               }
                         b.addSubBlock(b2);
          break;
        case POUND:
          jj_consume_token(POUND);
          b2 = readFunction(p);
            if(!r.equals("")) {
                          TaemsBlock b1 = new TaemsBlock(p);
                          b1.setTaems(r);
                          r = "";
                          b.addSubBlock(b1);
                              }
                        b.addSubBlock(b2);
          break;
        case COMMA:
          jj_consume_token(COMMA);
                  r = r + ",";
          break;
        case AFFECT:
          jj_consume_token(AFFECT);
                  r = r + "=";
          break;
        case SPECIAL:
          t = jj_consume_token(SPECIAL);
                  r = r + t.image;
          break;
        case ID:
          t = jj_consume_token(ID);
                  r = r + " " + t.image;
          break;
        case NUM:
          t = jj_consume_token(NUM);
                  r = r + " " + t.image;
          break;
        case LPAREN:
          jj_consume_token(LPAREN);
            r = r + "\t(";
          break;
        case RPAREN:
          jj_consume_token(RPAREN);
            r = r + "\t)";
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case RPAREN:
      case DOLLAR:
      case AT:
      case POUND:
      case AFFECT:
      case COMMA:
      case ID:
      case SPECIAL:
      case NUM:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
    }
          if(!r.equals("")) {
             b.setTaems(r);
          }
          {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public Block readFunction(PreProcessor p) throws ParseException {
  Block b=null;
  String r="",answer="";
  Object n1, n2;
  Vector v;
  Token t1,t2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RANDOMFLOAT:
      jj_consume_token(RANDOMFLOAT);
      jj_consume_token(LPAREN);
      n1 = readArgument(p);
      jj_consume_token(COMMA);
      n2 = readArgument(p);
      jj_consume_token(RPAREN);
                                                                               b = new randomFunction(p,randomFunction.FLOAT, n1, n2);
      break;
    case SUM:
      jj_consume_token(SUM);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
    b = new sumFunction(p, v);
      break;
    case DIFF:
      jj_consume_token(DIFF);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new diffFunction(p, v);
      break;
    case QUOT:
      jj_consume_token(QUOT);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new quotFunction(p, v);
      break;
    case ROUND:
      jj_consume_token(ROUND);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new roundFunction(p, v);
      break;
    case TRIM:
      jj_consume_token(TRIM);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new trimFunction(p, v);
      break;
    case SPACE:
      jj_consume_token(SPACE);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new spaceFunction(p, v);
      break;
    case DEF:
      jj_consume_token(DEF);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new defFunction(p, v);
      break;
    case NDEF:
      jj_consume_token(NDEF);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new ndefFunction(p, v);
      break;
    case CONCAT:
      jj_consume_token(CONCAT);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new concatFunction(p, v);
      break;
    case LENGTH:
      jj_consume_token(LENGTH);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new lengthFunction(p, v);
      break;
    case GETITEMAT:
      jj_consume_token(GETITEMAT);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new getitematFunction(p, v);
      break;
    case ADDITEMAT:
      jj_consume_token(ADDITEMAT);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new additematFunction(p, v);
      break;
    case DELITEMAT:
      jj_consume_token(DELITEMAT);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new delitematFunction(p, v);
      break;
    case RANDOMINT:
      jj_consume_token(RANDOMINT);
      jj_consume_token(LPAREN);
      n1 = readArgument(p);
      jj_consume_token(COMMA);
      n2 = readArgument(p);
      jj_consume_token(RPAREN);
                                                                              b = new randomFunction(p,randomFunction.INT, n1, n2);
      break;
    case RANDOMLIST:
      jj_consume_token(RANDOMLIST);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
   b = new randomListFunction(p,v);
      break;
    case PROD:
      jj_consume_token(PROD);
      jj_consume_token(LPAREN);
      v = readArguments(p);
      jj_consume_token(RPAREN);
     b = new prodFunction(p, v);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (b == null){
        b = new TaemsBlock(p);
        ((TaemsBlock)b).setTaems(r);
        }
         {if (true) return(b);}
    throw new Error("Missing return statement in function");
  }

  final public Object readArgument(PreProcessor p) throws ParseException {
  String r="",answer;
  Token t;
  Block b;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      t = jj_consume_token(NUM);
              r = t.image;
      break;
    case ID:
      t = jj_consume_token(ID);
             r = t.image;
      break;
    case DOLLAR:
      jj_consume_token(DOLLAR);
      t = jj_consume_token(ID);
                      {if (true) return(new Variable(p, t.image));}
      break;
    case AT:
      jj_consume_token(AT);
      t = jj_consume_token(ID);
                  {if (true) return(new List(p, t.image));}
      break;
    case 49:
      jj_consume_token(49);
      r = readText();
      break;
    case POUND:
      jj_consume_token(POUND);
      b = readFunction(p);
                                {if (true) return(b);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Vector readArguments(PreProcessor p) throws ParseException {
  Object answer;
  Vector v = new Vector();
  Token t;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOLLAR:
      case AT:
      case POUND:
      case ID:
      case NUM:
      case 49:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      answer = readArgument(p);
      v.addElement(answer);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
      }
    }
    {if (true) return(v);}
    throw new Error("Missing return statement in function");
  }

  final public DefineBlock readDefine(PreProcessor p, boolean i) throws ParseException {
  Token t=new Token(),t1;
  DefineBlock d=null;
  Block b;
  Vector v;
  String tmp;
    if (jj_2_3(3)) {
      t = jj_consume_token(ID);
      jj_consume_token(AFFECT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        jj_consume_token(49);
        tmp = readText();
                              d = new DefineBlock(p, t.image, i,true);
                              TaemsBlock tb = new TaemsBlock(p);
                              tb.setTaems(tmp);
                              d.addSubBlock(tb);
        break;
      case POUND:
        jj_consume_token(POUND);
        b = readFunction(p);
                              d = new DefineBlock(p, t.image, i,true);
                              d.addSubBlock(b);
        break;
      case AT:
        jj_consume_token(AT);
        jj_consume_token(LPAREN);
        v = readArguments(p);
        jj_consume_token(RPAREN);
                              d = new ListBlock(p, t.image, v, i,true);
        break;
      case ID:
      case NUM:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          t1 = jj_consume_token(ID);
          break;
        case NUM:
          t1 = jj_consume_token(NUM);
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                              d = new DefineBlock(p, t.image, i,true);
                              tb = new TaemsBlock(p);
                              tb.setTaems(t1.image);
                              d.addSubBlock(tb);
        break;
      case DOLLAR:
        jj_consume_token(DOLLAR);
        t1 = jj_consume_token(ID);
                              d = new DefineBlock(p, t.image, i,true);
                              b = new Variable(p, t1.image);
                              d.addSubBlock(b);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        t = jj_consume_token(ID);
        v = readStandardBlocks(p);
        jj_consume_token(ENDDEFINE);
        d = new DefineBlock(p, t.image, i,false);
                    d.addSubBlocks(v);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  final public String readText() throws ParseException {
  String s="";
  Token t;
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOLLAR:
      case ID:
      case SPECIAL:
      case NUM:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        t = jj_consume_token(ID);
         if (s.equals(""))
                       s = t.image;
                     else
                             s = s + " " + t.image;
        break;
      case SPECIAL:
        t = jj_consume_token(SPECIAL);
         if (s.equals(""))
                       s = t.image;
                     else
                             s = s + " " +t.image;
        break;
      case DOLLAR:
        jj_consume_token(DOLLAR);
        t = jj_consume_token(ID);
         if (s.equals(""))
                       s = t.image;
                     else
           s = s + " $" + t.image;
        break;
      case NUM:
        t = jj_consume_token(NUM);
         if (s.equals(""))
                       s = t.image;
                     else
           s = s + " " + t.image;
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(49);
           {if (true) return(s);}
    throw new Error("Missing return statement in function");
  }

  final public WhileBlock readWhile(PreProcessor p) throws ParseException {
        WhileBlock b = new WhileBlock(p);
        Condition c;
        Vector v;
    jj_consume_token(LPAREN);
    c = readMultipleConditions(p);
    jj_consume_token(RPAREN);
    v = readStandardBlocks(p);
    jj_consume_token(ENDWHILE);
                b.setCondition(c);
                b.addSubBlocks(v);
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public IfBlock readIf(PreProcessor p) throws ParseException {
        IfBlock b = new IfBlock(p),b1;
        TaemsBlock t;
        Condition c;
        Vector v;
    jj_consume_token(LPAREN);
    c = readMultipleConditions(p);
    jj_consume_token(RPAREN);
    v = readStandardBlocks(p);
                        b.setCondition(c);
                        b.addIfs(v);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSEIF:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      jj_consume_token(ELSEIF);
      jj_consume_token(LPAREN);
      c = readMultipleConditions(p);
      jj_consume_token(RPAREN);
      v = readStandardBlocks(p);
                                b1 = new IfBlock(p);
                                b1.setCondition(c);
                                b1.addIfs(v);
                                b.addElseIf(b1);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      v = readStandardBlocks(p);
      jj_consume_token(ENDIF);
                                        b.addElses(v);
      break;
    case ENDIF:
      jj_consume_token(ENDIF);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }
